More Java 21 friendly